Use PaintRecorder instead of PaintRecordBuilder in PlaceholderImage.

Previously, PlaceholderImage was using PaintRecordBuilder incorrectly to
construct an SkImage of its appearance, which triggered a DCHECK in
debug builds.

This CL changes PlaceholderImage to use a PaintRecorder to construct the
SkImage instead.

BUG=717058

Review-Url: https://codereview.chromium.org/2849303002
Cr-Commit-Position: refs/heads/master@{#468542}

Former-commit-id: 5d206a778cd0c9fbc5b14447e13bf825a20f9152